# class-exercises-fall2024

lab01/: google-home.html  start-web-prj.sh
lab01/my_new_folder/: index.html  style.css
lab02/: ContainsPair.java
lab03/: answers.md
lab04/: answers.md
lab05/: answers.md
lab05/poetry-demo/: lab05-experiments.py  pyproject.toml
lab06/javascript_rps/: package.json  run-tests-vanilla.js  your-task.js
lab06/javascript_rps/test/: run-tests-mocha.js
lab06/python_rps/: pyproject.toml  run_tests_framework.py  run_tests_vanilla.py  your_task.py
lab07/: index.html  package-lock.json  package.json
lab07/src/: App.jsx  ButtonCount.jsx  Profile.css  Profile.jsx  main.jsx
lab08/: App.jsx  package.json
lab09/: answers.md
project02/: package.json
project02/backend/: server.py
project02/ui/src/js/: App.jsx
project02/ui/src/js/components/: CourseSearchForm.jsx
project02/ui/src/js/services/: api.jsx
topic05/app/: arithmetic.py  main.py
topic05/tests/: test_main.py
